# andamio-SSOI

./: .gitignore  LICENSE  README.md  andamio-config.json  cabal.project  config-blockfrost.json  sample.config.json  swagger-api.json
andamio-onchain/: andamio-onchain.cabal
andamio-onchain/src/Andamio/GlobalState/: Compiled.hs
andamio-onchain/src/Andamio/GlobalState/OnChain/: GlobalStateDatum.hs  GlobalStateValidator.hs
andamio-onchain/src/Andamio/Index/: Compiled.hs
andamio-onchain/src/Andamio/Index/OnChain/: IndexScripts.hs  InitIndexPolicy.hs
andamio-onchain/src/Andamio/Index/OnChain/IndexScripts/: IndexParams.hs  MintingScript.hs  SpendingScript.hs
andamio-onchain/src/Andamio/LocalState/: Compiled.hs
andamio-onchain/src/Andamio/LocalState/OnChain/: SignerScripts.hs  TokenScripts.hs  Utility.hs
andamio-onchain/src/Andamio/LocalState/OnChain/Signer/: MintingScript.hs  SignerParams.hs  SpendingScript.hs
andamio-onchain/src/Andamio/LocalState/OnChain/Token/: MintingScript.hs  SpendingScript.hs  TokenParams.hs
andamio-onchain/src/Andamio/ProveCreds/: Compiled.hs
andamio-onchain/src/Andamio/ProveCreds/OnChain/: ProveCredsDatum.hs  ProveCredsValidator.hs
andamio-onchain/src/Andamio/Utility/OnChain/: Address.hs  BuiltinByteString.hs  Datum.hs  LazyContextV3.hs  Redeemers.hs  TxInInfo.hs  TxOut.hs  Value.hs
andamio-server/: andamio-server.cabal
andamio-server/server/: server-main.hs
andamio-server/src/Andamio/API/: API.hs  Context.hs  QueryAPI.hs  TxAPI.hs
andamio-server/src/Andamio/API/Query/: GetCredentialsByAlias.hs  GetIndexScriptData.hs  GetLSSignerScriptData.hs  GetLSTokenScriptData.hs  GetPossibleRewardTxRefs.hs  LocalStateScriptDataResponse.hs
andamio-server/src/Andamio/API/Tx/: AddCredentialSigner.hs  AddCredentialToken.hs  AddRewards.hs  InitCredentialSigner.hs  InitCredentialToken.hs  InitSSOISystem.hs  MintLocalStateSigner.hs  MintLocalStateToken.hs  MintSSOI.hs  ProveCredentials.hs  UnsignedTxResponse.hs
andamio-server/src/Andamio/Utility/: API.hs
andamio-tx-building/: andamio-tx-building.cabal
andamio-tx-building/src/Andamio/: Tx.hs
andamio-tx-building/src/Andamio/Tx/: InitSystem.hs  MintSSOI.hs  ProveCredentials.hs
andamio-tx-building/src/Andamio/Tx/Signer/: AddCredSigner.hs  MintLSSigner.hs
andamio-tx-building/src/Andamio/Tx/Token/: AddCredToken.hs  MintLSToken.hs
andamio-tx-building/src/Andamio/Utility/: Tx.hs
andamio-tx-building/tests/: ssoi-privnet-tests.hs
docs/project/: RUN.md  SETUP.md  SSOI Closed Alpha Report.md  SSOI Standard CIP.md  Test Transaction Report.md  milestone2.md  overview.md
docs/research/: Atala-Prism.md  Keri.md  hydra.md
preprod/tx/: add-credential-signer.raw  add-credential-signer.sign  add-credential-token.raw  add-credential-token.sign  add-rewards.raw  add-rewards.sign  empty-tx.raw  init-credential-signer.raw  init-credential-signer.sign  init-credential-token.raw  init-credential-token.sign  init-ssoi-system.raw  init-ssoi-system.sign  mint-local-state-signer.raw  mint-local-state-signer.sign  mint-local-state-token.raw  mint-local-state-token.sign  mint-ssoi.raw  mint-ssoi.sign  prove-credentials.raw  prove-credentials.sign
preprod/wallets/: issuer-stake.addr  issuer-stake.skey  issuer-stake.vkey  issuer.addr  issuer.skey  issuer.vkey  user-stake.addr  user-stake.skey  user-stake.vkey  user.addr  user.skey  user.vkey
scripts/: 00-write-server-config.sh  01-start-server.sh  02-init-ssoi-system.sh  03-mint-ssoi.sh  04a-init-credential-signer.sh  04b-init-credential-token.sh  04c-add-rewards.sh  05a-mint-local-signer.sh  05b-mint-local-token.sh  06a-add-credential-signer.sh  06b-add-credential-token.sh  07-prove-credentials.sh  create-user-stake.sh  env.sh  get-credentials-by-alias.sh
