cabal-version:      3.8
name:               andamio-server
version:            0.1.0
synopsis:           Server for a SSOI system
description:        Proof of Concept for a Self-sovereign on-chain Identity (SSOI) system.
license-file:       LICENSE
build-type:         Simple
category:           Blockchain, Cardano, PoC
homepage:           https://andamio.io/
bug-reports:        https://github.com/Andamio-Platform/andamio-SSOI/issues
tested-with:        GHC == 9.6.5

source-repository head
  type:     git
  location: https://github.com/Andamio-Platform/andamio-SSOI

common common
    default-language: Haskell2010

    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ExplicitForAll
        ScopedTypeVariables
        DeriveGeneric
        StandaloneDeriving
        DeriveLift
        GeneralizedNewtypeDeriving
        DeriveFunctor
        DeriveFoldable
        DeriveTraversable
        LambdaCase
        MultiParamTypeClasses
        TypeOperators
        FlexibleInstances
        NamedFieldPuns
        TypeFamilies
        FlexibleContexts
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        DataKinds
        PatternGuards
        GADTs
        ImportQualifiedPost
        MultiWayIf
        RankNTypes
        RecordWildCards
        TemplateHaskell
        TypeApplications
        UndecidableInstances
        DuplicateRecordFields
        InstanceSigs
        RoleAnnotations
        ViewPatterns

    ghc-options:      
        -Wall
        -Wcompat
        -Wunused-packages
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wmissing-export-lists
        -fno-show-valid-hole-fits 
        -Werror

library andamio-atlas-api
    import: common
    hs-source-dirs: src
    exposed-modules:

        Andamio.API.Context
        Andamio.API.API

        Andamio.API.TxAPI
        Andamio.API.Tx.UnsignedTxResponse
        Andamio.API.Tx.InitSSOISystem
        Andamio.API.Tx.InitCredentialSigner
        Andamio.API.Tx.MintLocalStateSigner
        Andamio.API.Tx.AddCredentialSigner
        Andamio.API.Tx.InitCredentialToken
        Andamio.API.Tx.MintLocalStateToken
        Andamio.API.Tx.AddCredentialToken
        Andamio.API.Tx.MintSSOI
        Andamio.API.Tx.ProveCredentials
        Andamio.API.Tx.AddRewards

        Andamio.API.QueryAPI
        Andamio.API.Query.LocalStateScriptDataResponse
        Andamio.API.Query.GetIndexScriptData
        Andamio.API.Query.GetLSSignerScriptData
        Andamio.API.Query.GetLSTokenScriptData
        Andamio.API.Query.GetPossibleRewardTxRefs
        Andamio.API.Query.GetCredentialsByAlias

        Andamio.Utility.API

    build-depends:
        , base
        , atlas-cardano
        , swagger2
        , servant-server
        , servant-swagger
        , text
        , aeson
        , andamio-tx-building
        , andamio-onchain
        , plutus-ledger-api
        , plutus-tx
        , base16-bytestring

executable andamio-ssoi-server
   import: common
   hs-source-dirs: server
   main-is: server-main.hs
   ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-T
   build-depends:
       , aeson-pretty
       , base
       , bytestring
       , atlas-cardano
       , andamio-server:andamio-atlas-api
       , servant-server
       , transformers
       , wai-cors
       , http-types
       , warp
