cabal-version:      3.8
name:               andamio-tx-building
version:            0.1.0
synopsis:           Tx builder for a SSOI system
description:        Proof of Concept for a Self-sovereign on-chain Identity (SSOI) system.
license-file:       LICENSE
build-type:         Simple
category:           Blockchain, Cardano, PoC
homepage:           https://andamio.io/
bug-reports:        https://github.com/Andamio-Platform/andamio-SSOI/issues
tested-with:        GHC == 9.6.5

source-repository head
  type:     git
  location: https://github.com/Andamio-Platform/andamio-SSOI

common common
    default-language: Haskell2010

    default-extensions:
        NoImplicitPrelude
        OverloadedStrings
        ExplicitForAll
        ScopedTypeVariables
        DeriveGeneric
        StandaloneDeriving
        DeriveLift
        GeneralizedNewtypeDeriving
        DeriveFunctor
        DeriveFoldable
        DeriveTraversable
        LambdaCase
        MultiParamTypeClasses
        TypeOperators
        FlexibleInstances
        NamedFieldPuns
        TypeFamilies
        FlexibleContexts
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        DataKinds
        PatternGuards
        GADTs
        ImportQualifiedPost
        MultiWayIf
        RankNTypes
        RecordWildCards
        TemplateHaskell
        TypeApplications
        UndecidableInstances
        DuplicateRecordFields
        InstanceSigs
        RoleAnnotations
        ViewPatterns

    ghc-options:      
        -Wall
        -Wcompat
        -Wunused-packages
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wmissing-export-lists
        -Wmissing-deriving-strategies
        -fno-show-valid-hole-fits 
        -Werror

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:     Andamio.Tx
                     , Andamio.Tx.InitSystem
                     , Andamio.Tx.MintSSOI
                     , Andamio.Tx.ProveCredentials
                     , Andamio.Tx.Signer.MintLSSigner
                     , Andamio.Tx.Signer.AddCredSigner
                     , Andamio.Tx.Token.MintLSToken
                     , Andamio.Tx.Token.AddCredToken

                     , Andamio.Utility.Tx

  build-depends:       base 
                     , plutus-ledger-api 
                     , plutus-tx 
                     , atlas-cardano
                     , andamio-onchain

test-suite ssoi-privnet-tests
  import:              common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             ssoi-privnet-tests.hs

  build-depends:       base
                     , andamio-tx-building
                     , atlas-cardano
                     , tasty
                     , tasty-hunit